# RoselynAnalyzer

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
src/roselyn_analyzer/: __init__.py  main.py
src/roselyn_analyzer/analyzer/: __init__.py  roslyn_analyzer.py
src/roselyn_analyzer/clone_and_build/: __init__.py  cloner.py
src/roselyn_analyzer/file_reader/: __init__.py  snippet_reader.py
src/roselyn_analyzer/processor/: __init__.py  code_modernizer.py
src/roselyn_analyzer/resolver/: __init__.py  sarif_reader.py
tests/: __init__.py  test_main.py
